--- a/tsp_book/mini_book/_bibliography/references.bib
+++ b/tsp_book/mini_book/_bibliography/references.bib
@@ -1,13 +1,6 @@
-@book{guttag2016introduction,
-  title={Introduction to computation and programming using Python: With application to understanding data},
-  author={Guttag, John},
-  year={2016},
-  publisher={MIT Press}
-}
-
-@book{hill2016learning,
-  title={Learning scientific programming with python},
-  author={Hill, Christian},
-  year={2016},
-  publisher={Cambridge University Press}
+@book{el2019modeling,
+  title={Modeling and Simulation of Thermal Power Plants with ThermoSysPro: A Theoretical Introduction and a Practical Guide},
+  author={El Hefni, Baligh and Bouskela, Daniel},
+  year={2019},
+  publisher={Springer}
 }
