deploy: 88a43710e062083f0b3da24a6a235b0d90bd0d4f

--- a/_sources/docs/centrifugal_pump.ipynb
+++ b/_sources/docs/centrifugal_pump.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "technical-fabric",
+   "id": "wanted-reminder",
    "metadata": {},
    "source": [
     "(centrifugal_pump)=\n",
@@ -47,9 +47,20 @@
     "```\n",
     "\n",
     "\n",
-    "## Understanding the pump parameters\n",
+    "## Understanding the system parameters\n",
     "\n",
+    "The centrifugal pump has two characteristic functions, usually provided by the manufacturer.\n",
+    "Both apply to the average volumetric flow rate $q$ divided by the shaft angular speed $\\omega$.\n",
+    "The first characteristic $f_\\eta$ relates the pump hydraulic efficiency to the ratio.\n",
+    "The other characteristic $f_h$ relates the pump head to the ratio.\n",
     "\n",
+    "These characteristics are approximated by second-order polynomials in the pump component:\n",
+    "\n",
+    "$$f_h(\\frac{q}{\\omega}) = a_0 + a_1\\left(\\frac{q}{\\omega}\\right) + a_2\\left(\\frac{q}{\\omega}\\right)^2$$\n",
+    "\n",
+    "$$f_\\eta(\\frac{q}{\\omega}) = b_0 + b_1\\left(\\frac{q}{\\omega}\\right) + b_2\\left(\\frac{q}{\\omega}\\right)^2$$\n",
+    "\n",
+    "To understand the effect of the characteristic parameters, we modify their value.\n",
     "\n",
     "\n",
     "## Bibliography\n",
