deploy: 97c27c56cc7082fe738042bb3023bf6f96f0b0e2

--- a/_sources/docs/centrifugal_pump.ipynb
+++ b/_sources/docs/centrifugal_pump.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "active-spell",
+   "id": "every-fashion",
    "metadata": {},
    "source": [
     "(centrifugal_pump)=\n",
@@ -56,9 +56,9 @@
     "\n",
     "These characteristics are approximated by second-order polynomials in the pump component:\n",
     "\n",
-    "$$f_h(\\frac{q}{\\omega}) = a_0 + a_1\\left(\\frac{q}{\\omega}\\right) + a_2\\left(\\frac{q}{\\omega}\\right)^2$$\n",
+    "$$f_h\\left(\\frac{q}{\\omega}\\right) = a_0 + a_1\\left(\\frac{q}{\\omega}\\right) + a_2\\left(\\frac{q}{\\omega}\\right)^2$$\n",
     "\n",
-    "$$f_\\eta(\\frac{q}{\\omega}) = b_0 + b_1\\left(\\frac{q}{\\omega}\\right) + b_2\\left(\\frac{q}{\\omega}\\right)^2$$\n",
+    "$$f_\\eta\\left(\\frac{q}{\\omega}\\right) = b_0 + b_1\\left(\\frac{q}{\\omega}\\right) + b_2\\left(\\frac{q}{\\omega}\\right)^2$$\n",
     "\n",
     "To understand the effect of the characteristic parameters, we modify their value.\n",
     "\n",
