Simplify import of FMPY_SIM

--- a/tsp_book/docs/simulate_fmu_low_ambition.ipynb
+++ b/tsp_book/docs/simulate_fmu_low_ambition.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "phantom-murder",
    "metadata": {},
    "outputs": [
@@ -31,17 +31,13 @@
     "\n",
     "import numpy as np\n",
     "from os.path import join\n",
-    "import os, sys, inspect\n",
+    "import sys\n",
+    "sys.path.append(\"../script\")\n",
+    "import fmpy_sim\n",
     "\n",
     "directory = \"../script/fmu\"\n",
     "fmu_filename = \"PumpMotor.fmu\"\n",
     "path_fmu = join(directory, fmu_filename)\n",
-    "\n",
-    "kwargs = {\n",
-    "        \"validate\": False, \"fmi_type\": \"ModelExchange\", \"solver\": \"CVode\",\n",
-    "        \"relative_tolerance\": 1e-6\n",
-    "}\n",
-    "\n",
     "\n",
     "# Establish parameter bounds\n",
     "\n",
@@ -63,16 +59,11 @@
     "list_output = [\"Pipe.Q\"]\n",
     "output_filter = list_input.extend(list_output)\n",
     "final_time = 50\n",
+    "\n",
+    "kwargs = fmpy_sim.get_recommended_dict()\n",
     "kwargs.update({\"stop_time\": final_time, \"output\": list_output})\n",
     "\n",
     "doe_data = np.array([[xx] for xx in dic_range[list_input[0]]])\n",
-    "\n",
-    "current_dir = os.path.dirname(os.path.abspath(inspect.getfile(inspect.currentframe())))\n",
-    "parent_dir = os.path.dirname(current_dir)\n",
-    "newpath = os.path.join(parent_dir, \"script\")\n",
-    "sys.path.insert(0, newpath) \n",
-    "import fmpy_sim\n",
-    "\n",
     "\n",
     "list_df = fmpy_sim.simulate_on_doe(\n",
     "    list_input, doe_data, path_fmu, **kwargs)"
