--- a/tsp_book/docs/draw_head_char.ipynb
+++ b/tsp_book/docs/draw_head_char.ipynb
@@ -17,7 +17,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "comfortable-charleston",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -558,6 +562,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
