Hide cell input in Notebook

--- a/tsp_book/docs/draw_torque_char.ipynb
+++ b/tsp_book/docs/draw_torque_char.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "unable-murray",
    "metadata": {},
    "source": [
     "# Torque semi-parabolic characteristics\n",
@@ -17,8 +16,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "comfortable-charleston",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -416,8 +418,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ceramic-establishment",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -490,15 +495,18 @@
     "p.xaxis[0].axis_label = 'Time (s)'\n",
     "p.yaxis[0].axis_label = 'Mass flow rate (kg/s)'\n",
     "p.legend.click_policy=\"hide\"\n",
+    "p.title.text = 'Click on legend entries to hide the corresponding lines'\n",
     "show(p)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "popular-twenty",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": [
+     "hide-input"
+    ]
    },
    "outputs": [
     {
@@ -569,13 +577,11 @@
     "p.legend.title = list_input[0]\n",
     "p.xaxis[0].axis_label = 'Time (s)'\n",
     "p.yaxis[0].axis_label = 'Mass flow rate (kg/s)'\n",
-    "p.title.text = 'Click on legend entries to hide the corresponding lines'\n",
     "show(p)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "religious-afternoon",
    "metadata": {},
    "source": [
     "Changing `rh_coef[1]` and `rh_coef[2]` affects the rise time to the nominal mass flow rate."
@@ -584,13 +590,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "optional-polish",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -606,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
