deploy: 7dbf7a300499f0a80f15ee7981ee9b0d0e52ef09

--- a/_sources/docs/the_component.ipynb
+++ b/_sources/docs/the_component.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "alpine-petersburg",
+   "id": "brilliant-devil",
    "metadata": {},
    "source": [
     "(centrifugal_pump)=\n",
@@ -25,10 +25,25 @@
     "\n",
     "Two ThermoSysPro components model a centrifugal pump: [StaticCentrifugalPump](https://thermosyspro.gitlab.io/documentation/src/WaterSteam/Machines/StaticCentrifugalPump.html) and [CentrifugalPump](https://thermosyspro.gitlab.io/documentation/src/WaterSteam/Machines/CentrifugalPump.html).\n",
     "\n",
-    "For the static centrifugal pump, the rotational speed of the pump is fixed.\n",
-    "It is therefore impossible to diminish the pump speed to regulate or modify the output flow.\n",
-    "The centrifugal pump however accepts modifications of the rotational speed during operations.\n",
-    "% FALSE : IN MODELICA, THE ROTATION SPEED IS A PARAMETER FOR BOTH CASES.\n",
+    "CentrifugalPump is a very general pump model, which enables all functioning modes except for cavitation.\n",
+    "This component covers all functioning modes in static as well as in dynamic.\n",
+    "In practice, we need the characteristic on the four quadrants which are rarely given by the pump constructors.\n",
+    "\n",
+    "```{figure} /_static/centrifugal_pump/characteristic_domain.png\n",
+    "---\n",
+    "height: 300px\n",
+    "name: characteristic_domain\n",
+    "---\n",
+    "Centrifugal pump operating domains.\n",
+    "```\n",
+    "\n",
+    "StaticCentrifugalPump can be seen as a static restriction of CentrifugalPump to the first quadrant, corresponding to \"Normal pumping\".\n",
+    "This component must be used only in normal functioning, even only in nominal functioning as dynamic aspects are neglected.\n",
+    "\n",
+    "StaticCentrifugalPump thus corresponds to CentrifugalPump with:\n",
+    "- static equations (derived terms are removed),\n",
+    "- semi-parabolic head characteristic,\n",
+    "- semi-parabolic torque characteristic (analytic formula which is exact only around the nominal point $\\theta = \\frac{\\pi}{4}$).\n",
     "\n",
     "```{figure} /_static/centrifugal_pump/static_vs_dynamic.png\n",
     "---\n",
