deploy: 795b78c1661d922d60251a6a9b3defc1bf6373bd

--- a/_sources/docs/the_component.ipynb
+++ b/_sources/docs/the_component.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "brilliant-devil",
+   "id": "played-deviation",
    "metadata": {},
    "source": [
     "(centrifugal_pump)=\n",
@@ -25,22 +25,22 @@
     "\n",
     "Two ThermoSysPro components model a centrifugal pump: [StaticCentrifugalPump](https://thermosyspro.gitlab.io/documentation/src/WaterSteam/Machines/StaticCentrifugalPump.html) and [CentrifugalPump](https://thermosyspro.gitlab.io/documentation/src/WaterSteam/Machines/CentrifugalPump.html).\n",
     "\n",
-    "CentrifugalPump is a very general pump model, which enables all functioning modes except for cavitation.\n",
+    "*CentrifugalPump* is a very general pump model, which enables all functioning modes except for cavitation.\n",
     "This component covers all functioning modes in static as well as in dynamic.\n",
     "In practice, we need the characteristic on the four quadrants which are rarely given by the pump constructors.\n",
     "\n",
     "```{figure} /_static/centrifugal_pump/characteristic_domain.png\n",
     "---\n",
-    "height: 300px\n",
+    "height: 400px\n",
     "name: characteristic_domain\n",
     "---\n",
     "Centrifugal pump operating domains.\n",
     "```\n",
     "\n",
-    "StaticCentrifugalPump can be seen as a static restriction of CentrifugalPump to the first quadrant, corresponding to \"Normal pumping\".\n",
+    "*StaticCentrifugalPump* can be seen as a static restriction of CentrifugalPump to the first quadrant, corresponding to \"Normal pumping\".\n",
     "This component must be used only in normal functioning, even only in nominal functioning as dynamic aspects are neglected.\n",
     "\n",
-    "StaticCentrifugalPump thus corresponds to CentrifugalPump with:\n",
+    "*StaticCentrifugalPump* thus corresponds to *CentrifugalPump* with:\n",
     "- static equations (derived terms are removed),\n",
     "- semi-parabolic head characteristic,\n",
     "- semi-parabolic torque characteristic (analytic formula which is exact only around the nominal point $\\theta = \\frac{\\pi}{4}$).\n",
@@ -50,7 +50,7 @@
     "height: 200px\n",
     "name: static_vs_dynamic\n",
     "---\n",
-    "StaticCentrifugalPump (left) and CentrifugalPump (right).\n",
+    "*StaticCentrifugalPump* (left) and *CentrifugalPump* (right).\n",
     "```\n",
     "\n",
     "In the following case study, we employ the CentrifugalPump component.\n",
