Change layout to improve rendering

--- a/tsp_book/docs/draw_head_char.ipynb
+++ b/tsp_book/docs/draw_head_char.ipynb
@@ -5,12 +5,7 @@
    "id": "accurate-estonia",
    "metadata": {},
    "source": [
-    "# Head semi-parabolic characteristic\n",
-    "\n",
-    "The semi-parabolic head and torque characteristics are valid on the domain $(q, \\omega) \\ge 0$.  \n",
-    "If `mode_car_hn`=2, the couple of parameters `hn_coef` rule the head characteristic.  \n",
-    "`hn_coef[1]` and `hn_coef[2]` correspond to $a_2$ and $a_0$, i.e. the square and constant coefficient of the characteristic.  \n",
-    "The following figures show their effect on the mass flow rate evolution in the cooling system."
+    "# Head semi-parabolic characteristic"
    ]
   },
   {
@@ -415,6 +410,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "internal-guidance",
+   "metadata": {},
+   "source": [
+    "The semi-parabolic head and torque characteristics are valid on the domain $(q, \\omega) \\ge 0$.  \n",
+    "If `mode_car_hn`=2, the couple of parameters `hn_coef` rule the head characteristic.  \n",
+    "`hn_coef[1]` and `hn_coef[2]` correspond to $a_2$ and $a_0$, i.e. the square and constant coefficient of the characteristic.  \n",
+    "The following figures show their effect on the mass flow rate evolution in the cooling system."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "ceramic-establishment",
@@ -498,6 +504,14 @@
     "p.yaxis[0].axis_label = 'Mass flow rate (kg/s)'\n",
     "p.legend.click_policy=\"hide\"\n",
     "show(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "passing-archives",
+   "metadata": {},
+   "source": [
+    "Changing hn_coef[1] obviously influences the nominal mass flow rate reached by the pump."
    ]
   },
   {
@@ -609,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
