--- a/tsp_book/docs/draw_torque_char.ipynb
+++ b/tsp_book/docs/draw_torque_char.ipynb
@@ -2,20 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "partial-consumption",
    "metadata": {},
    "source": [
-    "# Torque semi-parabolic characteristics\n",
-    "\n",
-    "The semi-parabolic head and torque characteristics are valid on the domain $(q, \\omega) \\ge 0$.\n",
-    "If `mode_car_Cr`=2, the couple of parameters `rh_coef` rule the torque characteristic.\n",
-    "\n",
-    "The parameters `rh_coef[1]` and `rh_coef[2]` correspond to $b_2$ and $b_1$, i.e. the coefficients of $x^2$ and $x$ in the characteristic.  \n",
-    "The following figures show their effect on the mass flow rate evolution in the cooling system."
+    "# Torque semi-parabolic characteristics"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "weird-cologne",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -416,8 +412,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "expanded-forestry",
+   "metadata": {},
+   "source": [
+    "The semi-parabolic head and torque characteristics are valid on the domain $(q, \\omega) \\ge 0$.\n",
+    "If `mode_car_Cr`=2, the couple of parameters `rh_coef` rule the torque characteristic.\n",
+    "\n",
+    "The parameters `rh_coef[1]` and `rh_coef[2]` correspond to $b_2$ and $b_1$, i.e. the coefficients of $x^2$ and $x$ in the characteristic.  \n",
+    "The following figures show their effect on the mass flow rate evolution in the cooling system."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "banner-spice",
    "metadata": {
     "tags": [
      "hide-input"
@@ -500,8 +509,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "massive-forest",
+   "metadata": {},
+   "source": [
+    "Changing `rh_coef[1]` affects the rise time to the nominal mass flow rate."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "announced-thesis",
    "metadata": {
     "scrolled": true,
     "tags": [
@@ -582,14 +600,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "subsequent-coach",
    "metadata": {},
    "source": [
-    "Changing `rh_coef[1]` and `rh_coef[2]` affects the rise time to the nominal mass flow rate."
+    "Changing `rh_coef[2]` similarly affects the rise time to the nominal mass flow rate."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "lucky-internet",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -612,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
