--- a/_sources/docs/the_component.ipynb
+++ b/_sources/docs/the_component.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "tough-joseph",
+   "id": "cubic-lemon",
    "metadata": {},
    "source": [
     "(centrifugal_pump)=\n",
@@ -90,7 +90,7 @@
     "\n",
     "## Bibliography\n",
     "\n",
-    "```{bibliography} ../_bibliography/references.bib\n",
+    "```{bibliography} ../references.bib\n",
     "```"
    ]
   }
